Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0
-
7706c2a28 (dev), ad2164f6d (6.6)
Description
drawPoints seems round the points which seems reasonable, but drawPolygons is probably floored so the points at same polygon points are sometimes off.
To reproduce, run attached example which draws a triangle with different scales. Some of those fractional scale ratios places the red points off by one pixel.